# bootcamp3

./: .env.example  01-generate-keypair.ts  01-load-keypair.ts  02-airdrop.ts  02-check-balance.ts  02-multisig-mint-tokens.ts  02-nonce-sign-transaction.ts  02-pay_recipient.ts  02-send-sol.ts  03-create-token-account.ts  03-create-token-metadata.ts  03-create-token-mint.ts  03-mint-token.ts  05-token-account-list.ts  README.md  package-lock.json  package.json  uab3-meta.json  utils.ts
rust_exerices/: Cargo.toml
rust_exerices/src/: lib.rs  main.rs  utils.rs  utils2022.rs
