[package]
name = "bootcamp3"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.18.22"
solana-sdk = "1.18.22"
rand = "0.8" 
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }  # For async support
spl-token = "3.5.0"
spl-token-2022 = "0.8.0" # For SPL Token 2022
mpl-token-metadata = "4.1.2"
spl-associated-token-account = "2.3.0"
solana-program = "1.18.22"
